OldStuff/tests/copies/newAndNeedChangeTests/fail/Default.java
package fail;

import java.lang.System;

public class Default {

  public static void main(String[] args ) {
    default = "this random word";
  }

}
